--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -5,15 +5,52 @@
 
 {% block extrahead %}
 <style>
+h3 {
+  font-family: sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+}
+.container{
+  width: 1460px;
+  }
 table {
   margin-top: 8px;
+}
+.data_table {
+  width: 60%;
+  border-collapse: separate;
+  float: left;
+}
+th{
+width: 25%;
+padding: 6px;
+text-align: center;
+vertical-align: top;
+color: black;
+background-color: aliceblue;
+border: 1px solid blue;
+}
+td{
+width: 25%;
+padding: 6px;
+background-color: #fff;
+border: 1px solid #b9b9b9;
+}
+.ave_table {
+  width: 35%;
+  border-collapse: separate;
+  float: right;
+}
+.ave_table th {
+  background-color: yellow;
+  border: 2px solid orange;
 }
 </style>
 {% endblock %}
 
 {% block content %}
     <h3 class="page-header">データ一覧</h3>
-    <table class="table table-striped table-bordered table-autofilter sortable-theme-bootstrap" data-sortable>
+    <table class="data_table">
       <thead>
         <tr>
           <th>datetime</th>
@@ -33,4 +70,31 @@ table {
         {% endfor %}
       </tbody>
     </table>
+    <script type="text/javascript">
+    var ave_tmp = 0;
+    var ave_moi = 0;
+    var cnt = 0;
+    {% for i in dataset %}
+    ave_tmp = ave_tmp + {{ i.tempature }};
+    ave_moi = ave_moi + {{ i.moisture }};
+    cnt = cnt + 1;
+    {% endfor %}
+    ave_tmp = ave_tmp/cnt;
+    console.log(ave_tmp);
+    ave_moi = ave_moi/cnt;
+    console.log(ave_moi);
+    </script>
+    <table class="ave_table">
+      <thead>
+        <th>平均気温</th>
+        <th>平均水分量</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td align="center"><script>document.write(ave_tmp);</script></td>
+          <td align="center"><script>document.write(ave_moi);</script></td>
+        </tr>
+      </tbody>
+    </table>
+
 {% endblock content %}
