--- a/AIoT/templates/base.html
+++ b/AIoT/templates/base.html
@@ -14,7 +14,7 @@
 <script src="{% static 'js/table.js' %}"></script>
 <script src="{% static 'js/sortable.min.js' %}"></script>
 <!-- <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script> -->
-<script src="{% static 'Highcharts-4/js/highcharts.js' %}"></script>
+<!-- <script src="{% static 'Highcharts-4/js/highcharts.js' %}"></script> -->
 
 <script src="{% static 'js/d3/d3.v3.min.js' %}"></script>
 
