--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -62,6 +62,9 @@ border: 1px solid #b9b9b9;
 
 {% block content %}
     <h3 class="page-header">データ一覧</h3>
+    <svg id="svg1" width="256" height="256">
+    <image id="zu1" x="0" y="0" width="100%" height="100%" opacity="1"></image>
+    </svg>
     <table class="data_table">
       <thead>
         <tr>
@@ -83,6 +86,7 @@ border: 1px solid #b9b9b9;
       </tbody>
     </table>
     <script type="text/javascript">
+    d3.select("#zu1").attr("xlink:href","/site_media/"+"zu1.jpg");
     var ave_tmp = 0;
     var ave_moi = 0;
     var cnt = 0;
