--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -17,7 +17,7 @@ table {
   margin-top: 8px;
 }
 .data_table {
-  width: 60%;
+  width: 50%;
   border-collapse: separate;
   float: left;
 }
@@ -37,9 +37,9 @@ background-color: #fff;
 border: 1px solid #b9b9b9;
 }
 .ave_table, .rec_ave_table, .max_table, .min_table {
-  width: 35%;
+  width: 25%;
   border-collapse: separate;
-  float: right;
+  clear: both;
 }
 .ave_table th {
   background-color: yellow;
@@ -65,6 +65,7 @@ border: 1px solid #b9b9b9;
     <svg id="svg1" width="256" height="256">
     <image id="zu1" x="0" y="0" width="100%" height="100%" opacity="1"></image>
     </svg>
+    <div style="height:400px; width:600px; overflow-y:scroll; float: left;">
     <table class="data_table">
       <thead>
         <tr>
@@ -85,6 +86,7 @@ border: 1px solid #b9b9b9;
         {% endfor %}
       </tbody>
     </table>
+    </div>
     <script type="text/javascript">
     d3.select("#zu1").attr("xlink:href","/site_media/"+"zu1.jpg");
     var ave_tmp = 0;
