--- a/AIoT/templates/AIoT/detail.html
+++ b/AIoT/templates/AIoT/detail.html
@@ -11,11 +11,11 @@ h3 {
   font-weight: bold;
 }
 .container{
-  /*width: 1460px;*/
-  background-color: snow;
+  width: 1160px;
+  background-color: white;
   border-width: 0px 4px;
   border-style: ridge;
-  border-color: green;
+  border-color: purple;
   }
 table {
   margin-top: 8px;
@@ -63,8 +63,9 @@ border: 1px solid #b9b9b9;
   }
 #graph_erea {
   float:right;
-  display: inline-block;
-  position: relative;
+  /*display: inline-block;*/
+  /*position: relative;*/
+  /*clear: right;*/
 }
 #line_graph {
   background-color: white;
@@ -73,21 +74,22 @@ border: 1px solid #b9b9b9;
 }
 #picture {
   float: left;
-  display: inline-block;
+  /*display: inline-block;*/
   border: 3px solid green;
   background-color: white;
 }
 body{
     /*background-color: rgba(90,250,80,0.3);*/
-    background-color: greenyellow;
+    background-color: mintcream;
   }
 #memo_area {
   float: left;
-  display: block;
+  /*display: block;*/
+  clear: both;
 }
 #table_area {
   float: right;
-  display: inline;
+  /*display: inline;*/
 }
 p.tabs
   {
@@ -134,13 +136,13 @@ p.tabs
 
 {% block content %}
     <h3 class="page-header" id="header"></h3>
-    <svg id="picture" width="400" height="350">
+    <svg id="picture" width="400" height="440">
     <image id="zu1" x="0" y="0" width="100%" height="100%" opacity="1"></image>
     </svg>
-    <div id="graph_erea" x="600" y="560">
+    <div id="graph_erea" width="400" height="440">
     <div class="tabbox" id="tabbox"></div>
     <svg id="line_graph" x="1024" y="560"></svg></div>
-    <div id="memo_area" x="600" y="560">
+    <div id="memo_area" width="600" height="560">
       <p>メモ用の場所</p>
     </div>
     <script type="text/javascript">
@@ -301,7 +303,7 @@ var parameter_data = [];
     rec_ave_moi = rec_ave_moi/10;
     make_linegraph("temperature");
     </script>
-    <div id="table_area" x="1024" y="560">
+    <div id="table_area" width=700 height=560>
     <table class="ave_table">
       <thead>
         <th>平均気温(全体)</th>
