メインページにカレンダー追加，メインページの配置変更，図の変更

--- a/AIoT/templates/base.html
+++ b/AIoT/templates/base.html
@@ -9,6 +9,8 @@
 <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
 <link href="{% static 'css/sortable-theme-bootstrap.css' %}" rel="stylesheet">
 
+<link href="{% static 'css/cal.css' %}" rel="stylesheet" type="text/css">
+
 <script src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/table.js' %}"></script>
@@ -27,5 +29,6 @@
       {{ content }}
     {% endblock %}
   </div>
+  <script type="text/javascript" charset="UTF-8" src="{% static 'js/cal.js' %}"></script>
 </body>
 </html>
