--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -110,6 +110,7 @@ border: 1px solid #b9b9b9;
 
     <div id="area1">
     <div class="data_table_scr">
+    水やる？
     <table class="data_table">
       <thead>
         <tr>
