カレンダー少し修正

--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -325,7 +325,8 @@ calObj[0].month["9-1-3"] = 'Holyday;敬老の日'; // 9月 月曜日(1) 第3 と
 calObj[0].month["10-1-2"] = 'Holyday;体育の日'; // 10月 月曜日(1) 第2 ということね。
 
 // ["backward"] 過去の日付のクラス名(指定しない場合はnull)
-calObj[0].backward = 'backward';
+//calObj[0].backward = 'backward';
+calObj[0].backward = null;
 
 // カレンダーをクリックできるようにする場合 (有効 : true / 無効 : false)
 // クラス指定でURLが指定されている場合はそっちが優先されます。
